# src/router/api.ts
@@ -4,15 +4,10 @@ import authMiddleware from "../middleware/auth.middleware";
 
 const router = express.Router();
 
-router.get('/', (req, res)=> {
-    res.status(200).json({
-        massage: 'Server is running',
-        data: null
-    })
-});
 
 router.post('/register', authControllers.Register)
 router.post('/login', authControllers.Login)
 router.get('/me', authMiddleware , authControllers.Me)
+router.post('/activation', authControllers.Activation)
 
 export default router
